<resources>
    <string name="app_name">gas-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="pedir_gas">Faça seu pedido</string>
    <string name="action_sobre">Sobre</string>
    <string name="carrinho">Carrinho</string>
    <string name="botijao">Botijão 13kg</string>
    <string name="total">Total: R$</string>
    <string name="butano">Butano Gás</string>
    <string name="welcome">Seja bem-vindo!</string>
    <string name="reais">R$</string>
    <string name="preco">preco</string>
    <string name="btnAdicionar">Adicionar</string>
    <string name="produtos">Produtos</string>
    <string name="dp">Dados Pessoais</string>
    <string name="pag">Pagamento</string>
    <string name="din">Dinheiro</string>
    <string name="card">Cartão</string>
    <string name="historico">Histórico</string>
    <string name="btnExcluir">Deletar</string>
    <string name="btnComprar">Concluir</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="qtd">Quantidade: </string>
    <string name="seg">Segurança</string>
    <string name="btnCancelar">Cancelar</string>
</resources>