<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewProdutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produtos"
                android:textSize="18dp"
                android:textStyle="bold" />
            <ImageButton
                android:id="@+id/btnExcluir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/baseline_delete_outline_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/textViewNomeProd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginRight="90dp"
                android:text="@string/botijao" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewQtdDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qtd" />

                <TextView
                    android:id="@+id/textViewQtd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/qtd" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/preco"
                android:textSize="15dp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
