<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutPedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Produtos" />


    <TextView
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dados Pessoais" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/layoutNome"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:hintTextColor="?attr/colorPrimary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nome" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/layoutEndereco"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:hintTextColor="?attr/colorPrimary">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="Pagamento" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="104dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="61dp"
            android:text="Dinheiro" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="99dp"
            android:layout_height="31dp"
            android:layout_marginLeft="68dp"
            android:layout_marginEnd="48dp"
            android:layout_toStartOf="@+id/checkBox"
            android:text="Cartão" />
    </RelativeLayout>
    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/amarelo"
        android:text="@string/btnComprar" />


</androidx.appcompat.widget.LinearLayoutCompat>